header editing and home creation

--- a/angular/frontend/src/app/components/template/header/header.component.html
+++ b/angular/frontend/src/app/components/template/header/header.component.html
@@ -7,9 +7,9 @@
     <span class = "title-grounp">
         <a>
             <i class = "material-icons">
-                dashborard <!--ou podemos usar  'home'-->
+                home<!--ou podemos usar  'dashborard '-->
             </i>
-            Aplicação CRUD
+            Início
         </a>
     </span>
 </mat-toolbar>
