--- a/angular/frontend/src/app/components/product/product-delete/product-delete.component.html
+++ b/angular/frontend/src/app/components/product/product-delete/product-delete.component.html
@@ -11,7 +11,7 @@
         </mat-form-field>
     </form>
     <button mat-raised-button (click)="deleteProduct()" color = "accent">
-        Atualizar
+        Excluir
     </button>
     
     <button mat-raised-button (click)="cancel()">
