--- a/angular/frontend/src/styles.css
+++ b/angular/frontend/src/styles.css
@@ -5,9 +5,20 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
 .red{
-    color: rgb(227, 94, 107);
+    color: #e35e6b;
 }
 
 .vertical-middle{
     vertical-align: middle;
+}
+
+
+.msg-success{
+    background-color: #28a745;
+    color:#fff
+}
+
+.msg-error{
+    background-color: #e35e6b;
+    color:#fff
 }
