Update of titles

--- a/angular/frontend/src/app/components/template/header/header.component.html
+++ b/angular/frontend/src/app/components/template/header/header.component.html
@@ -5,11 +5,11 @@
         </a>
     </span>
     <span class = "title-grounp">
-        <a>
+        <a routerLink = "{{ routeUrl }}">
             <i class = "material-icons">
-                home<!--ou podemos usar  'dashborard '-->
+                {{ icon }}
             </i>
-            Início
+            {{ title }}
         </a>
     </span>
 </mat-toolbar>
