--- a/angular/frontend/src/app/components/template/header/header.component.css
+++ b/angular/frontend/src/app/components/template/header/header.component.css
@@ -7,16 +7,19 @@
     display: flex;
     align-items: center;
     text-decoration: none;
-    padding-left: 10px;
+    padding-left: 30px;
+    color: #999;
+    display: flex;
 }
 
 .header .logo{
     max-height: 32px;
 }
 
-.header .tittle-group{
+.header .tittle-group {
     padding-left: 25px;
 }
-.header .tittle-group i{
+i {
     padding-right: 5px;
 }
+
