--- a/angular/frontend/src/app/views/home/home.component.html
+++ b/angular/frontend/src/app/views/home/home.component.html
@@ -3,7 +3,7 @@
         Bem vindo
     </mat-card-title>
     <mat-card-subtitle class = "subtitle">
-        <br>Sistema Loja PicPay
-        <p> <br>Aqui você tem acesso ao nossos dados da loja PicPay, com todos produtos disponíveis. Adicione, edite e exclua produtos de acordo com a necessidade.</p>
+        <br>Sistema Loja da Empresa
+        <p> <br>Aqui você tem acesso ao nossos dados da loja da Empresa, com todos produtos disponíveis. Adicione, edite e exclua produtos de acordo com a necessidade.</p>
     </mat-card-subtitle>
 </mat-card>
